overflow fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,6 @@ html {
 
 body {
   height: 100vh;
-  overflow: hidden;
 }
 
 .menu {
